feat: return all products in local memory